samples/_failures_safe/1761353643_097334_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0cdfbb1f.c: In function ‘main’:
./samples/SAFE/__tmp_0cdfbb1f.c:171:12: error: missing terminating " character
  171 |     printf("Enter expression to
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0cdfbb1f.c:171:5: error: expected expression at end of input
  171 |     printf("Enter expression to
      |     ^~~~~~
./samples/SAFE/__tmp_0cdfbb1f.c:171:5: error: expected declaration or statement at end of input
